# skeleton

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml.example  rust-toolchain
.cargo/: audit.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: general-issue.md  release-template.md
.github/PULL_REQUEST_TEMPLATE/: new_release.md  pull_request.md
docs/: sentry.md
src/: error.rs  logging.rs  main.rs  metrics.rs  settings.rs  tags.rs
src/server/: dockerflow.rs  mod.rs
src/web/: extractors.rs  handlers.rs  mod.rs
src/web/middleware/: db.rs  sentry.rs
tools/: rust_setup.sh
