[package]
name = "skeleton"
version = "0.1.0"
authors = [
    "jrconlin <jr+git@mozilla.com>",
    # "Your Name Here <email address here>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2"
actix-web = "3"
actix-rt = "2"
actix-cors = "0.5"
backtrace = "0.3"
# for metrics
cadence = "0.24"
docopt = "1.1"
config = "0.10"
env_logger = "0.8"
futures = "0.3"
hostname = "0.3"
lazy_static = "1.4"
regex = "1.4"
serde = "1.0"
sentry = "0.22"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_info", "release_max_level_info", "dynamic-keys"] }
slog-async = "2.6"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.7"
smallvec = "1.6"  # for RUSTSEC-2021-0003 (via actix-rt 1.1.1, via actix-http 2.2)
thiserror = "1.0"
woothee = "0.11"
